ignore email without body text(image or html)

--- a/src/data-prep-compliance.ipynb
+++ b/src/data-prep-compliance.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "df_all = df_all.drop_duplicates()\n",
     "df_all.isna().sum()\n",
-    "df_all.dropna(subset=['text_in_img', 'text_in_html', 'subject'], how='all', inplace = True)"
+    "df_all.dropna(subset=['text_in_img', 'text_in_html'], how='all', inplace = True)"
    ]
   },
   {
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "(11249, 10)"
+       "(11182, 10)"
       ]
      },
      "execution_count": 4,
@@ -59,14 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all = df_all.fillna(\" \")\n",
-    "def fillinblank(r,c):\n",
-    "    if len(r[c]) == 0:\n",
-    "        return \" \"\n",
-    "    return r[c]\n",
-    "df_all['text_in_html'] = df_all.apply (lambda row: fillinblank(row,'text_in_html'), axis=1)\n",
-    "df_all['text_in_img'] = df_all.apply (lambda row: fillinblank(row,'text_in_img'), axis=1)\n",
-    "df_all['subject'] = df_all.apply (lambda row: fillinblank(row,'subject'), axis=1)"
+    "df_all = df_all.fillna(\" \")\n"
    ]
   },
   {
@@ -227,32 +220,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_all['text_in_html']=df_all['text_in_html'].replace(r'\\n', ' ', regex=True)\n",
-    "df_all['text_in_img']= df_all['text_in_img'].replace(r'\\n', ' ', regex=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def string_preprocess(r,c):\n",
-    "    if len(r[c]) == 0:\n",
-    "        return \"\"\n",
-    "    return re.sub('\\s+', ' ', r[c]).strip()\n",
-    "    \n",
-    "df_all['text_in_html'] = df_all.apply (lambda row: string_preprocess(row,'text_in_html'), axis=1)\n",
-    "df_all['text_in_img'] = df_all.apply (lambda row: string_preprocess(row,'text_in_img'), axis=1)\n",
-    "df_all['subject'] = df_all.apply (lambda row: string_preprocess(row,'subject'), axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -267,8 +234,6 @@
        "7        How to Lower Your Risk of Having More Breakout...\n",
        "8        Psyche Institute, Rainbow Reiki Training, Pet ...\n",
        "9                               July - Employee Newsletter\n",
-       "10             Polo Daily Happenings - Saturday, June 22nd\n",
-       "11             Polo Daily Happenings - Wednesday, May 22nd\n",
        "12                                                Reminder\n",
        "13       The latest news for you about Field Trip & Kon...\n",
        "14             One big boy moves out, a big girl moves in!\n",
@@ -287,7 +252,16 @@
        "27                               Humanizing Justice & More\n",
        "28       Learjet 60 Availability > 17-23APR FROM LEPA, ...\n",
        "29                Reminder: Too Good to Melt Sale Part 2!!\n",
+       "30       Palmgren Managed Inventory Event  from Ken Wal...\n",
+       "31                             Pick your match play winner\n",
        "                               ...                        \n",
+       "11212                              Mise à jour de sécurité\n",
+       "11213                              The latest news for you\n",
+       "11214                                  Account Deactivated\n",
+       "11215                              The latest news for you\n",
+       "11216                           Paypal has been Restricted\n",
+       "11217                              The latest news for you\n",
+       "11218         RE: The latest news for you from Colostadept\n",
        "11219                                      Renewal failure\n",
        "11220                              The latest news for you\n",
        "11221                                              您的工作邀请函\n",
@@ -311,17 +285,10 @@
        "11239                              The latest news for you\n",
        "11240                              The latest news for you\n",
        "11241                              The latest news for you\n",
-       "11242                                               工作提醒邀请\n",
-       "11243                                               邀请通知工作\n",
-       "11244                                                  614\n",
-       "11245                                                 1111\n",
-       "11246                             Enter email subject here\n",
-       "11247                                               GRDGRD\n",
-       "11248                             Enter email subject here\n",
-       "Name: subject, Length: 11249, dtype: object"
+       "Name: subject, Length: 11182, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,10 +299,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "df_bert = pd.DataFrame({\n",
     "    'id':range(len(df_all)),\n",
     "    'label':df_all['label'],\n",
@@ -346,7 +314,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def string_preprocess(r,c):\n",
+    "    s= re.sub('\\s+', ' ', r[c]).strip()\n",
+    "    if len(s) == 0:\n",
+    "        return \"\"\n",
+    "    return s\n",
+    "\n",
+    "df_bert['text'] = df_bert.apply (lambda row: string_preprocess(row,'text'), axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id       0\n",
+       "label    0\n",
+       "alpha    0\n",
+       "text     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bert.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11182, 4)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bert.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -372,8 +399,6 @@
        "7        How to Lower Your Risk of Having More Breakout...\n",
        "8        Psyche Institute, Rainbow Reiki Training, Pet ...\n",
        "9        July - Employee Newsletter Employee of the Mon...\n",
-       "10           Polo Daily Happenings - Saturday, June 22nd  \n",
-       "11           Polo Daily Happenings - Wednesday, May 22nd  \n",
        "12       Reminder Camp Hours Reminder : Summer Camp Hou...\n",
        "13       The latest news for you about Field Trip & Kon...\n",
        "14       One big boy moves out, a big girl moves in! Mo...\n",
@@ -392,11 +417,20 @@
        "27       Humanizing Justice & More E-News April 2019 In...\n",
        "28       Learjet 60 Availability > 17-23APR FROM LEPA, ...\n",
        "29       Reminder: Too Good to Melt Sale Part 2!! Last ...\n",
+       "30       Palmgren Managed Inventory Event from Ken Walt...\n",
+       "31       Pick your match play winner Pick your match pl...\n",
        "                               ...                        \n",
-       "11219        Renewal failure Hello [[EMAILADDRESS OR \"\"]] \n",
+       "11212    Mise à jour de sécurité un problème avec ce ma...\n",
+       "11213    The latest news for you You don't want to miss...\n",
+       "11214    Account Deactivated Credit Card Problem UPDATE...\n",
+       "11215    The latest news for you You don't want to miss...\n",
+       "11216    Paypal has been Restricted Your Paypal has bee...\n",
+       "11217    The latest news for you You don't want to miss...\n",
+       "11218    RE: The latest news for you from Colostadept Y...\n",
+       "11219         Renewal failure Hello [[EMAILADDRESS OR \"\"]]\n",
        "11220    The latest news for you You don't want to miss...\n",
-       "11221              您的工作邀请函 You don't want to miss this. ‌ \n",
-       "11222                                               614 ‌ \n",
+       "11221               您的工作邀请函 You don't want to miss this. ‌\n",
+       "11222                                                614 ‌\n",
        "11223    Auto-Renewal has failed permanently, your acco...\n",
        "11224    The latest news for you You don't want to miss...\n",
        "11225    The latest news for you You don't want to miss...\n",
@@ -410,23 +444,16 @@
        "11233    The latest news for you You don't want to miss...\n",
        "11234    The latest news for you You don't want to miss...\n",
        "11235    The latest news for you You don't want to miss...\n",
-       "11236                  潮鞋专柜货 You don't want to miss this. \n",
-       "11237                  潮鞋专柜货 You don't want to miss this. \n",
+       "11236                   潮鞋专柜货 You don't want to miss this.\n",
+       "11237                   潮鞋专柜货 You don't want to miss this.\n",
        "11238    The latest news for you You don't want to miss...\n",
        "11239    The latest news for you You don't want to miss...\n",
        "11240    The latest news for you You don't want to miss...\n",
        "11241    The latest news for you You don't want to miss...\n",
-       "11242                                             工作提醒邀请  \n",
-       "11243                                             邀请通知工作  \n",
-       "11244                                                614  \n",
-       "11245                                               1111  \n",
-       "11246                           Enter email subject here  \n",
-       "11247                                             GRDGRD  \n",
-       "11248                           Enter email subject here  \n",
-       "Name: text, Length: 11249, dtype: object"
+       "Name: text, Length: 11182, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +547,7 @@
        "4   4     a  The GOOD NEWS of Troy, Ohio - 4/21/2019 Easter..."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +572,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,16 +609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2250, 4)"
+       "(2237, 4)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,16 +629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8999, 4)"
+       "(8945, 4)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,13 +649,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_df.to_csv(prefix+'train.tsv', sep='\\t', index=False, header=False)\n",
     "test_df.to_csv(prefix+'dev.tsv', sep='\\t', index=False, header=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
